template/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: itshell
  namespace: default
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: itshell
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: itshell
        image: <REPO>/<PROJECT>:<VERSION> 
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "100m"
            memory: 512Mi
          requests:
            cpu: "30m"
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /live.php
            port: 80
          initialDelaySeconds: 30 
          timeoutSeconds: 1
        volumeMounts:
          - name: wordpress-1
            mountPath: /var/www/html
      volumes:
        - name: wordpress-1
          persistentVolumeClaim:
           claimName: claim-var-itshell
      imagePullSecrets:
        - name: myregistrykey
