template/svc-lb-2.yml
apiVersion: v1
kind: Service
metadata:
  name: itshell
spec:
  type: LoadBalancer
  ports:
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: itshell
