template/svc-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: itshell
spec:
  type: LoadBalancer
  ports:
    - nodePort: 31187
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: itshell
