template/ing.yml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: itshell
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - itshell.dev.itshellws-k8s.com
    - www.itshellws.org
  rules:
  - host: itshell.dev.itshellws-k8s.com
    http:
      paths:
      - path: /
        backend:
          serviceName: itshell
          servicePort: 80
  - host: www.itshellws.org
    http:
      paths:
      - path: /
        backend:
          serviceName: itshell
          servicePort: 80
